--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
 <%#create a home html to display text in broswer%>
-Hello World!
+<h1>Hello World!</h1>
+<%# Emit makes generating HTML tags verysimple %>
+
+<h1> This is the home page</h1>
+
+
